--- a/MoneySplitter.Win10/Views/HomeView.xaml
+++ b/MoneySplitter.Win10/Views/HomeView.xaml
@@ -186,6 +186,8 @@
                     </ListView>
                 </StackPanel>
             </StackPanel>
+            <customControls:ErrorDetailsControl IsErrorVisable="{x:Bind ViewModel.IsErrorVisible, Mode=OneWay}"
+                                                ErrorDetails="{x:Bind ViewModel.ErrorDetailsModel, Mode=OneWay}"/>
             <customControls:LoadRingControl IsActiveRing="{x:Bind ViewModel.IsLoading, Mode=OneWay}"/>
         </Grid>
     </ScrollViewer>
