--- a/MoneySplitter.Win10/Views/TransactionDetailsView.xaml
+++ b/MoneySplitter.Win10/Views/TransactionDetailsView.xaml
@@ -73,7 +73,8 @@
 
                             </Button>
                             <Button Style="{StaticResource DefaultButtonStyle}"
-                                    Visibility="{x:Bind ViewModel.Data.IsGiveButtonVisibil, Mode=OneWay}">
+                                    Visibility="{x:Bind ViewModel.Data.IsGiveButtonVisibil, Mode=OneWay}"
+                                    Click="OnGiveButtonClick">
                                 <StackPanel Orientation="Horizontal">
                                     <FontIcon Style="{StaticResource GiveFontIconStyle}"
                                               FontSize="18"/>
@@ -83,7 +84,8 @@
                                 </StackPanel>
                             </Button>
                             <Button Style="{StaticResource DefaultButtonStyle}"
-                                Visibility="{x:Bind ViewModel.Data.IsRemindButtonVisibil, Mode=OneWay}">
+                                    Visibility="{x:Bind ViewModel.Data.IsRemindButtonVisibil, Mode=OneWay}"
+                                    Click="OnRemindButtonClick">
                                 <StackPanel Orientation="Horizontal">
                                     <FontIcon Style="{StaticResource RemindFontIconStyle}"
                                               FontSize="20"/>
@@ -221,6 +223,9 @@
                     </ListView>
                 </StackPanel>
             </Grid>
+            <customControls:ErrorDetailsControl IsErrorVisable="{x:Bind ViewModel.IsErrorVisible, Mode=OneWay}"
+                                                ErrorDetails="{x:Bind ViewModel.ErrorDetailsModel, Mode=OneWay}"/>
+            <customControls:LoadRingControl IsActiveRing="{x:Bind ViewModel.IsLoading, Mode=OneWay}"/>
         </Grid>
     </ScrollViewer>
 </Page>
